# senior-care-agent

./: .env.example  .gitignore  LICENSE  README.md  README_KR.md  agent.py  make_call.py  pyproject.toml  realtime_agent.py  utils.py
data/history/: history.json
data/requests/: requests.csv
prompts/: check_in_prompt.yaml  intake_prompt.yaml
